Remove image 'fixing' it's not worth it the constant layout jump, some users may be unhappy with skewed images, but maybe we can find another cutting solution later

--- a/web/public/shared.css
+++ b/web/public/shared.css
@@ -293,6 +293,7 @@ h2 {
 
 .secret-button .link-profile-pic {
   width: 48px;
+  min-height: 48px;
 }
 
 .compose-post {
